--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2966,10 +2966,14 @@ bq:
       model: 'First'
     - regex: 'BQ-5012L(?:[);/ ]|$)'
       model: 'Rich'
+    - regex: 'BQ-5521L(?:[);/ ]|$)'
+      model: 'Rich Max'
     - regex: 'BQS-5011(?:[);/ ]|$)'
       model: 'Monte Carlo'
     - regex: 'BQ-5010G(?:[);/ ]|$)'
       model: 'Spot'
+    - regex: 'BQ-5000G(?:[);/ ]|$)'
+      model: 'Velvet Easy'
     - regex: 'BQS-5010(?:[);/ ]|$)'
       model: 'Prague'
     - regex: 'BQ-5009L(?:[);/ ]|$)'
@@ -3888,7 +3892,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(SENIOR|F4[38]D8000K|VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AS260| (?:B450|B340))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(SENIOR|F4[38]D8000K|VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AS260| (?:B450|B340|A1[45]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
 
@@ -3915,7 +3919,7 @@ DEXP:
     - regex: 'H135[ _]Build'
       model: 'Atlas'
       device: 'desktop'
-    - regex: '(BL[12]50|BS155|BS160|BS[1256]50|AL[12]40)(?:[);/ ]|$)'
+    - regex: '(BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|A1[45]0)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'DEXP[ _]([^;/]+) Build'
       model: '$1'
@@ -13221,7 +13225,7 @@ teXet:
     - regex: 'TM-4503'
       device: 'smartphone'
       model: 'X-Quad'
-    - regex: '(TM-(?:3000|3200R|4003|4083|4377|4504|451[30]|500[35]|5[23]77|5571|3204R|520[04]|5581|5505|507[13]|5017|507[4-7]|6003|5513))'
+    - regex: '(TM-(?:3000|3200R|4003|4083|4377|4504|451[30]|500[35]|5[23]77|5571|3204R|520[04]|5581|5505|5017|507[14-7]|5081|6003|5513))'
       device: 'smartphone'
       model: '$1'
     - regex: 'TM-5006'
@@ -16007,7 +16011,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|FestXL|Tasty|Boost3)(?:[);/ ]|$)'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|FestXL|Tasty|Boost3|Expanse)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])(?:[);/ ]|$)'
@@ -16050,6 +16054,8 @@ Highscreen:
       model: 'Tasty'
     - regex: 'WinWin(?:[);/ ]|$)'
       model: 'WinWin'
+    - regex: 'Expanse(?:[);/ ]|$)'
+      model: 'Expanse'
 
 # CVTE
 CVTE:
@@ -17181,7 +17187,7 @@ TurboKids:
 
 # Jinga
 Jinga:
-  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus|Hotz[_ ]M1)(?:[);/ ]|$)'
+  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus|PicassoNote|Hotz[_ ]M1)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Optim4G(?:[);/ ]|$)'
@@ -17190,6 +17196,8 @@ Jinga:
       model: 'Hotz M1'
     - regex: 'PassPlus(?:[);/ ]|$)'
       model: 'Pass Plus'
+    - regex: 'PicassoNote(?:[);/ ]|$)'
+      model: 'Picasso Note'
     - regex: 'Jinga Iron(?:[);/ ]|$)'
       model: 'Iron'
     - regex: 'Jinga Basco neo(?:[);/ ]|$)'
