--- a/Tests/fixtures/smartphone-18.yml
+++ b/Tests/fixtures/smartphone-18.yml
@@ -14,7 +14,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J7 (2017)
+    model: Galaxy J7 (2017)
   os_family: Android
   browser_family: Opera
 - 
@@ -32,7 +32,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab A 8.0" LTE (2018)
+    model: Galaxy Tab A 8.0" LTE (2018)
   os_family: Android
   browser_family: Chrome
 - 
@@ -50,7 +50,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A9 Star
+    model: Galaxy A9 Star
   os_family: Android
   browser_family: Chrome
 - 
@@ -68,7 +68,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J7 Crown
+    model: Galaxy J7 Crown
   os_family: Android
   browser_family: Chrome
 - 
@@ -86,7 +86,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY W2018
+    model: Galaxy W2018
   os_family: Android
   browser_family: Unknown
 - 
@@ -104,7 +104,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A8 (2018)
+    model: Galaxy A8 (2018)
   os_family: Android
   browser_family: Chrome
 - 
@@ -122,7 +122,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY W2019
+    model: Galaxy W2019
   os_family: Android
   browser_family: Chrome
 - 
@@ -140,7 +140,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Grand Prime
+    model: Galaxy Grand Prime
   os_family: Android
   browser_family: Unknown
 - 
@@ -158,7 +158,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A6
+    model: Galaxy A6
   os_family: Android
   browser_family: Chrome
 - 
@@ -176,7 +176,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A6+
+    model: Galaxy A6+
   os_family: Android
   browser_family: Chrome
 - 
@@ -194,7 +194,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY Sol 3
+    model: Galaxy Sol 3
   os_family: Android
   browser_family: Chrome
 - 
@@ -212,7 +212,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY On5
+    model: Galaxy On5
   os_family: Android
   browser_family: Chrome
 - 
@@ -230,7 +230,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab E 8.0"
+    model: Galaxy Tab E 8.0"
   os_family: Android
   browser_family: Chrome
 - 
@@ -248,7 +248,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY Sol 2
+    model: Galaxy Sol 2
   os_family: Android
   browser_family: Chrome
 - 
@@ -266,7 +266,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J3 Sky
+    model: Galaxy J3 Sky
   os_family: Android
   browser_family: Chrome
 - 
@@ -284,7 +284,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY S7
+    model: Galaxy S7
   os_family: Android
   browser_family: Chrome
 - 
@@ -302,7 +302,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab S2 9.7" LTE
+    model: Galaxy Tab S2 9.7" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -320,7 +320,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 7
+    model: Galaxy Note 7
   os_family: Android
   browser_family: Chrome
 - 
@@ -338,7 +338,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 7
+    model: Galaxy Note 7
   os_family: Android
   browser_family: Chrome
 - 
@@ -356,7 +356,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 5
+    model: Galaxy Note 5
   os_family: Android
   browser_family: Chrome
 - 
@@ -374,7 +374,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 7
+    model: Galaxy Note 7
   os_family: Android
   browser_family: Chrome
 - 
@@ -392,7 +392,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 7
+    model: Galaxy Note 7
   os_family: Android
   browser_family: Chrome
 - 
@@ -410,7 +410,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J1 (2016)
+    model: Galaxy J1 (2016)
   os_family: Android
   browser_family: Chrome
 - 
@@ -428,7 +428,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J1 (2016)
+    model: Galaxy J1 (2016)
   os_family: Android
   browser_family: Chrome
 - 
@@ -446,7 +446,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 7
+    model: Galaxy Note 7
   os_family: Android
   browser_family: Unknown
 - 
@@ -464,7 +464,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A7 (2017)
+    model: Galaxy A7 (2017)
   os_family: Android
   browser_family: Chrome
 - 
@@ -482,7 +482,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY W2016
+    model: Galaxy W2016
   os_family: Android
   browser_family: Chrome
 - 
@@ -500,7 +500,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A5 (2017)
+    model: Galaxy A5 (2017)
   os_family: Android
   browser_family: Chrome
 - 
@@ -518,7 +518,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab 4 8.0" LTE
+    model: Galaxy Tab 4 8.0" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -536,7 +536,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab 4 10.1" LTE
+    model: Galaxy Tab 4 10.1" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -554,7 +554,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Grand Prime
+    model: Galaxy Grand Prime
   os_family: Android
   browser_family: Chrome
 - 
@@ -572,7 +572,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY S6 Edge
+    model: Galaxy S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -590,7 +590,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY S6 Edge+
+    model: Galaxy S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -608,7 +608,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J1
+    model: Galaxy J1
   os_family: Android
   browser_family: Chrome
 - 
@@ -626,7 +626,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J1 Mini
+    model: Galaxy J1 Mini
   os_family: Android
   browser_family: Chrome
 -
@@ -644,7 +644,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 5
+    model: Galaxy Note 5
   os_family: Android
   browser_family: Chrome
 - 
@@ -662,7 +662,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY Ace 4 Neo
+    model: Galaxy Ace 4 Neo
   os_family: Android
   browser_family: Chrome
 - 
@@ -680,7 +680,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY E5
+    model: Galaxy E5
   os_family: Android
   browser_family: Chrome
 - 
@@ -698,7 +698,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A7
+    model: Galaxy A7
   os_family: Android
   browser_family: Chrome
 - 
@@ -716,7 +716,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A5
+    model: Galaxy A5
   os_family: Android
   browser_family: Chrome
 - 
@@ -752,7 +752,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab 4 8.0" LTE
+    model: Galaxy Tab 4 8.0" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -770,7 +770,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab 4 8.0" LTE
+    model: Galaxy Tab 4 8.0" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -788,7 +788,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY Core Prime
+    model: Galaxy Core Prime
   os_family: Android
   browser_family: Chrome
 - 
@@ -824,7 +824,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A3 (2015)
+    model: Galaxy A3 (2015)
   os_family: Android
   browser_family: Chrome
 - 
@@ -842,7 +842,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab S 8.4" LTE
+    model: Galaxy Tab S 8.4" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -860,7 +860,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab A 8.0" LTE
+    model: Galaxy Tab A 8.0" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -878,7 +878,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab A 8.0" LTE
+    model: Galaxy Tab A 8.0" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -896,7 +896,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY E5
+    model: Galaxy E5
   os_family: Android
   browser_family: Chrome
 - 
@@ -914,7 +914,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Grand Prime
+    model: Galaxy Grand Prime
   os_family: Android
   browser_family: Chrome
 - 
@@ -932,7 +932,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY S4
+    model: Galaxy S4
   os_family: Android
   browser_family: Chrome
 - 
@@ -950,7 +950,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A50
+    model: Galaxy A50
   os_family: Android
   browser_family: Chrome
 - 
@@ -968,7 +968,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J5 (2016)
+    model: Galaxy J5 (2016)
   os_family: Android
   browser_family: Chrome
 - 
@@ -986,7 +986,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J5 (2016)
+    model: Galaxy J5 (2016)
   os_family: Android
   browser_family: Chrome
 - 
@@ -1004,7 +1004,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J1 (2016)
+    model: Galaxy J1 (2016)
   os_family: Android
   browser_family: Chrome
 - 
@@ -1022,7 +1022,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab Active 8.0" WiFi
+    model: Galaxy Tab Active 8.0" WiFi
   os_family: Android
   browser_family: Chrome
 - 
@@ -1040,7 +1040,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab 4 8.0" LTE
+    model: Galaxy Tab 4 8.0" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -1058,7 +1058,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY View 18.4" LTE
+    model: Galaxy View 18.4" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -1076,7 +1076,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY View 18.4" WiFi
+    model: Galaxy View 18.4" WiFi
   os_family: Android
   browser_family: Chrome
 - 
@@ -1094,7 +1094,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY View 18.4" LTE
+    model: Galaxy View 18.4" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -1112,7 +1112,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY View 18.4" LTE
+    model: Galaxy View 18.4" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -1130,7 +1130,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY View 18.4" LTE
+    model: Galaxy View 18.4" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -1148,7 +1148,7 @@
   device:
     type: tablet
     brand: Samsung
-    model: GALAXY Tab 4 10.1" LTE
+    model: Galaxy Tab 4 10.1" LTE
   os_family: Android
   browser_family: Chrome
 - 
@@ -1166,7 +1166,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY J3 Orbit
+    model: Galaxy J3 Orbit
   os_family: Android
   browser_family: Chrome
 - 
@@ -1220,7 +1220,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY Core Max
+    model: Galaxy Core Max
   os_family: Android
   browser_family: Chrome
 - 
@@ -1238,7 +1238,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Grand Prime
+    model: Galaxy Grand Prime
   os_family: Android
   browser_family: Chrome
 - 
@@ -4026,7 +4026,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY Z Flip
+    model: Galaxy Z Flip
   os_family: Android
   browser_family: Chrome
 - 
@@ -4044,7 +4044,7 @@
   device:
     type: smartphone
     brand: Samsung
-    model: GALAXY A41
+    model: Galaxy A41
   os_family: Android
   browser_family: Chrome
 - 
@@ -4350,7 +4350,7 @@
   device:
     type: phablet
     brand: Samsung
-    model: GALAXY Note 20 Ultra 5G
+    model: Galaxy Note 20 Ultra 5G
   os_family: Android
   browser_family: Chrome
 - 
