--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -8978,3 +8978,23 @@
     model: X9 Mini
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 9; X6_Soul_Xtreme) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.136 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: "79.0.3945.136"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: A2
+    model: X6 Soul Xtreme
+  os_family: Android
+  browser_family: Chrome
