--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -8998,3 +8998,23 @@
     model: X6 Soul Xtreme
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; X4_Soul_Vision Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: "64.0.3282.137"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: A2
+    model: X4 Soul Vision
+  os_family: Android
+  browser_family: Chrome
