--- a/Tests/fixtures/smartphone-3.yml
+++ b/Tests/fixtures/smartphone-3.yml
@@ -9018,3 +9018,23 @@
     model: X4 Soul Vision
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; X5_Soul_Style Build/O11019) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.125 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "8.1.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: "58.0.3029.125"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: A2
+    model: X5 Soul Style
+  os_family: Android
+  browser_family: Chrome
