--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -824,6 +824,8 @@ Bravis:
       model: 'Biz'
     - regex: 'BRAVIS POWER'
       model: 'Power'
+    - regex: 'BRAVIS[ _]SPARK'
+      model: 'Spark'
 
     - regex: 'BRAVIS[ _]SLIM[ _]3G'
       model: 'Slim 3G'
@@ -3931,7 +3933,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|(SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS260| (?:B450|B340|A1[45]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|(?:SENIOR|F4[38]D8000K|VA[12]10|VA170|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40|AL[23]50|AS155|AS260| (?:B450|B340|A1[45]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
 
@@ -3943,6 +3945,8 @@ DEXP:
       model: '4.5" AL250'
     - regex: 'AL350(?:[);/ ]|$)'
       model: '5.0" AL350'
+    - regex: 'AS155(?:[);/ ]|$)'
+      model: '5.45" AS155'
     - regex: 'AS260(?:[);/ ]|$)'
       model: '5.85" AS260'
       device: 'phablet'
@@ -5044,6 +5048,8 @@ Evolveo:
       model: 'Smart TV $1'
     - regex: 'EVOLVEO StrongPhone G([248])'
       model: 'StrongPhone G$1'
+    - regex: 'EVOLVEO StrongPhone Q(6)'
+      model: 'StrongPhone Q$1'
     - regex: 'EVOLVEO[ _]([^;/]*) Build'
       model: '$1'
 
@@ -5377,12 +5383,14 @@ Ghia:
 
 # Gigabyte
 Gigabyte:
-  regex: 'GSmart[ _][a-z0-9 ]+(?: Build|\))|Gigabyte-[a-z0-9]+|Simba SX1'
+  regex: 'GSmart[ _][a-z0-9 ]+(?: Build|\))|Gigabyte-[a-z0-9]+|Simba SX1|Classic[_ ](?:Joy|Pro)'
   device: 'smartphone'
   models:
     - regex: '(GSmart[ _][a-z0-9 ]+)(?: Build|\))'
       model: '$1'
     - regex: 'Gigabyte-([a-z0-9]+)'
+      model: '$1'
+    - regex: '(Classic[ _](?:Joy|Pro))'
       model: '$1'
     - regex: 'Simba SX1'
       model: 'GSmart Simba SX1'
@@ -7940,7 +7948,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|ZUK[ -_]|(?:TB2-X30L|TB3-710I|YT3-X50[ML]|K50a40|TB-(?:8504F|X304F|X704V|X704A)|A2107A-H|S6000|Z2 Plus|Vibe P1|VIBE [ZX]2|Vibe K5(?: Plus)?|P2A42|L18011|[5-8]01LV|Z2131|K350t|K31-t3|TAB 2 A8-50LC)(?:[);/ ]|$)'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|ZUK[ -_]|(?:TB2-X30L|TB3-710I|YT3-X50[ML]|K50a40|TB-(?:X103F|8504F|X304F|X704V|X704A)|A2107A-H|S6000|Z2 Plus|Vibe P1|VIBE [ZX]2|Vibe K5(?: Plus)?|P2A42|L18011|[5-8]01LV|Z2131|K350t|K31-t3|TAB 2 A8-50LC)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7990,6 +7998,9 @@ Lenovo:
       device: 'tablet'
     - regex: '801LV(?:[);/ ]|$)'
       model: 'TAB5 10.1"'
+      device: 'tablet'
+    - regex: 'TB-X103F(?:[);/ ]|$)'
+      model: 'TAB10 10.1"'
       device: 'tablet'
     - regex: 'TB-X704A(?:[);/ ]|$)'
       model: 'Moto Tab'
@@ -9626,7 +9637,7 @@ M.T.T.:
 
 # Navon
 Navon:
-  regex: '(?:Superme_Max|Supreme[_ ](?:Fine|Chief|Pure|Pro)(?:[_ ](?:Mini|Plus))?|Navon[_ ]Infinity)(?:[);/ ]|$)'
+  regex: 'Navon[_ ]|(?:Superme_Max|Supreme[_ ](?:Fine|Chief|Pure|Pro)(?:[_ ](?:Mini|Plus))?)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Superme_Max(?:[);/ ]|$)'
@@ -9647,6 +9658,8 @@ Navon:
       model: 'Supreme Pro'
     - regex: 'Navon[_ ]Infinity(?:[);/ ]|$)'
       model: 'Infinity'
+    - regex: 'Navon[_ ]Platinum 10 3G(?:[);/ ]|$)'
+      model: 'Platinum 10.1" 3G'
 
 # NOA
 NOA:
@@ -10563,10 +10576,10 @@ Orange:
 
 # Oukitel
 Oukitel:
-  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|U20_Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000| WP[5-7])(?:[);/ ]|$)'
+  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|K4000Pro|U20_Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4567]000| WP[5-7])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: '(C15|C16|K10000|K[46]000|WP[258])[ _]Pro(?:[);/ ]|$)'
+    - regex: '(C15|C16|K10000|K[46]000|WP[258])[ _]?Pro(?:[);/ ]|$)'
       model: '$1 Pro'
     - regex: 'OUKITEL K([37])(?:[);/ ]|$)'
       model: 'K$1'
@@ -15890,7 +15903,7 @@ Lemhoov:
       model: '$1'
 # MTC
 MTC:
-  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|MTC[ _]SMART[ _](?:Run|Start_2)'
+  regex: 'MTC[ _](968|97[82]|970|982[OT]?|1078)|(?:MTC[_ ])?SMART[ _]?(?:Race[2]?|Sprint|Run|Surf[2]?)[ _]4G|MTC975|Smart_LINE|MTC[ _]SMART[ _](?:Run|Start_2)'
   device: 'smartphone'
   models:
     - regex: 'MTC[ _]?(97[258]|970[H]?|982[OT]?|968)'
@@ -15902,10 +15915,12 @@ MTC:
       model: 'Smart Race 4G'
     - regex: 'SMART[ _]Race2[ _]4G'
       model: 'Smart Race 2 4G'
-    - regex: '(MTC_)?SMART[ _]Sprint[ _]4G'
+    - regex: '(?:MTC_)?SMART[ _]Sprint[ _]4G'
       model: 'Smart Sprint 4G'
-    - regex: '(MTC_)?SMART[ _]Start_2'
+    - regex: '(?:MTC_)?SMART[ _]Start_2'
       model: 'Smart Start 2'
+    - regex: 'Smart_LINE'
+      model: 'Smart Line'
     - regex: 'SMART[ _]?Run(?:[ _]4G)?'
       model: 'Smart Run 4G'
     - regex: 'SMART[ _]Surf2[ _]4G'
